feat: add ability to run a move during testing (#2028)