@@ -1,6 +1,5 @@
 package ai.timefold.solver.core.preview.api.move.builtin;
 
-import java.util.Collections;
 import java.util.List;
 
 import ai.timefold.solver.core.preview.api.domain.metamodel.PlanningListVariableMetaModel;
@@ -33,9 +32,11 @@ public final class Moves {
         return new ChangeMove<>(variableMetaModel, entity, value);
     }
 
-    public static <Solution_, Entity_> Move<Solution_> swap(
-            PlanningVariableMetaModel<Solution_, Entity_, Object> variableMetaModel, Entity_ leftEntity, Entity_ rightEntity) {
-        return swap(Collections.singletonList(variableMetaModel), leftEntity, rightEntity);
+    @SuppressWarnings("unchecked")
+    public static <Solution_, Entity_, Value_> Move<Solution_> swap(
+            PlanningVariableMetaModel<Solution_, Entity_, Value_> variableMetaModel, Entity_ leftEntity, Entity_ rightEntity) {
+        return swap(List.of((PlanningVariableMetaModel<Solution_, Entity_, Object>) variableMetaModel), leftEntity,
+                rightEntity);
     }
 
     public static <Solution_, Entity_> Move<Solution_> swap(
